# learn-fastapi-py

./: 1.CRUD.py  2. pydantic-example.py  3.async-await-example.py  4. middleware-cors-caching.py  README.md  annotaion.py  datatype.py  decorators py  fast-api-life-span.py  functions.py  oops.py  python-files.py  routes.py  session.py
aws/: 01-overview-and-app.py  01c-overview-and-app.yaml  02-vpc.py  02c-vpc.yaml  03-s3.py  03c-s3.yaml  04-ec2.py  04c-ec2.yaml  05-lambda.py  05c-lambda.yaml  06-api-gateway.py  06c-api-gateway.yaml  07-ecr.py  07c-ecr.yaml  08-ecs-fargate.py  08c-ecs-fargate.yaml  09-alb.py  09c-alb.yaml  10-cloudwatch.py  10c-cloudwatch.yaml  11-route53-cloudfront-acm.py  16-sns.py  (+26 more)
aws-case/: alb-application-load-balancer-guide.md  api-gateway-usage-plan-custom-domain.md  lambda-functions-complete-guide.md  s3-cloudfront-static-site-deploy.yaml  s3-cloudfront-static-site.yaml
learn-langgraph/: .env.example  01_state_basics.py  02_edges_and_flow.py  03_conditional_edges.py  04_state_reducers.py  05_chat_models.py  06_tool_calling.py  07_agent_loop.py  08_checkpointers.py  09_human_in_the_loop.py  10_streaming.py  11_subgraphs.py  12_error_handling.py  13_orchestrator.py  README.md  llm_helper.py  pyproject.toml
learn-mcp/: .env.example  01_hello_mcp_server.py  02_tool_patterns.py  03_input_validation.py  04_resources_and_prompts.py  05_http_transport.py  06_client_patterns.py  07_llm_tool_server.py  08_tool_result_meta.py  09_workflows.py  10_interrupts.py  11_multi_server.py  12_workflow_orchestration.py  README.md  llm_helper.py  pyproject.toml
(+40 files in other folders)
