[project]
name = "learn-mcp"
version = "0.1.0"
description = "Step-by-step MCP learning with FastMCP -- wired to TR LLM Orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.0",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "openai>=1.40",
    "azure-identity>=1.17",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "httpx>=0.24",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
